--- a/jmazaWeatherApp/src/app/zipcode-entry/zipcode-entry.component.html
+++ b/jmazaWeatherApp/src/app/zipcode-entry/zipcode-entry.component.html
@@ -2,7 +2,12 @@
   <h2>Enter a zipcode:</h2>
   <input type="text" #zipcode placeholder="Zipcode" class="form-control">
   <br>
-  <button class="btn btn-primary" (click)="addLocation(zipcode.value)" >
-    Add location
-  </button>
+  <div class="location-buttons">
+    <button class="btn btn-primary" (click)="addLocation(zipcode.value)" >
+      Add location
+    </button>
+    <button class="btn btn-primary" (click)="removeAllLocation()">
+      Remove locations
+    </button>
+  </div>
 </div>
