--- a/jmazaWeatherApp/src/app/current-conditions/current-conditions.component.html
+++ b/jmazaWeatherApp/src/app/current-conditions/current-conditions.component.html
@@ -1,21 +1,32 @@
-<div>
-  <div *ngFor="let location of currentConditionsByZip()" class="well flex" (click)="showForecast(location.zip)">
-    <div>
-      <h3>{{location.data.name}} ({{location.zip}})</h3>
-      <h4>Current conditions: {{location.data.weather[0].main}}</h4>
-      <h4>Temperatures today:</h4>
-      <p>
-        Current {{location.data.main.temp | number:'.0-0'}}
-        - Max {{location.data.main.temp_max | number:'.0-0'}}
-        - Min {{location.data.main.temp_min | number:'.0-0'}}
-      </p>
-      <p>
-        <a [routerLink]="['/forecast', location.zip]" >Show 5-day forecast for {{location.data.name}}</a>
-      </p>
-    </div>
-    <div>
-      <span class="close" (click)="removeLocation(location.zip)">&times;</span>
-      <img [src]="weatherService.getWeatherIcon(location.data.weather[0].id)">
-    </div>
- </div>
+<div class="tabs">
+  <ng-container *ngFor="let location of currentConditionsByZip()">
+    <!-- Tab links -->
+    <button class="tablinks"
+            (click)="selectedLocation = location">
+            {{ location.data.name }} ({{location.zip}})
+            <span class="close" (click)="removeLocation(location.zip)">&times;</span>
+    </button>
+  </ng-container>
 </div>
+
+<ng-container *ngIf="selectedLocation">
+  <div>
+    <h4>Current conditions: {{selectedLocation.data.weather[0].main}}</h4>
+    <h4>Temperatures today:</h4>
+    <p>
+      Current {{selectedLocation.data.main.temp | number:'.0-0'}}
+      - Max {{selectedLocation.data.main.temp_max | number:'.0-0'}}
+      - Min {{selectedLocation.data.main.temp_min | number:'.0-0'}}
+    </p>
+    <p>
+      <a [routerLink]="['/forecast', selectedLocation.zip]" >Show 5-day forecast for {{selectedLocation.data.name}}</a>
+    </p>
+  </div>
+  <div>
+    <span class="close" (click)="removeLocation(selectedLocation.zip)">&times;</span>
+    <img [src]="weatherService.getWeatherIcon(selectedLocation.data.weather[0].id)">
+  </div>
+</ng-container>
+
+
+
