--- a/jmazaWeatherApp/src/app/current-conditions/current-conditions.component.html
+++ b/jmazaWeatherApp/src/app/current-conditions/current-conditions.component.html
@@ -1,31 +1,33 @@
 <div class="tabs">
   <ng-container *ngFor="let location of currentConditionsByZip()">
-    <!-- Tab links -->
-    <button class="tablinks"
+    <div class="tablinks"
             (click)="selectedLocation = location">
-            {{ location.data.name }} ({{location.zip}})
+            <p> {{ location.data.name }} ({{location.zip}}) </p>
             <span class="close" (click)="removeLocation(location.zip)">&times;</span>
-    </button>
+  </div>
   </ng-container>
 </div>
 
 <ng-container *ngIf="selectedLocation">
-  <div>
-    <h4>Current conditions: {{selectedLocation.data.weather[0].main}}</h4>
-    <h4>Temperatures today:</h4>
-    <p>
-      Current {{selectedLocation.data.main.temp | number:'.0-0'}}
-      - Max {{selectedLocation.data.main.temp_max | number:'.0-0'}}
-      - Min {{selectedLocation.data.main.temp_min | number:'.0-0'}}
-    </p>
-    <p>
-      <a [routerLink]="['/forecast', selectedLocation.zip]" >Show 5-day forecast for {{selectedLocation.data.name}}</a>
-    </p>
-  </div>
-  <div>
-    <span class="close" (click)="removeLocation(selectedLocation.zip)">&times;</span>
-    <img [src]="weatherService.getWeatherIcon(selectedLocation.data.weather[0].id)">
-  </div>
+
+  <app-selected-condition>
+    <div>
+      <h4>Current conditions: {{selectedLocation.data.weather[0].main}}</h4>
+      <h4>Temperatures today:</h4>
+      <p>
+        Current {{selectedLocation.data.main.temp | number:'.0-0'}}
+        - Max {{selectedLocation.data.main.temp_max | number:'.0-0'}}
+        - Min {{selectedLocation.data.main.temp_min | number:'.0-0'}}
+      </p>
+      <p>
+        <a [routerLink]="['/forecast', selectedLocation.zip]" >Show 5-day forecast for {{selectedLocation.data.name}}</a>
+      </p>
+    </div>
+    <div>
+      <span class="close" (click)="removeLocation(selectedLocation.zip)">&times;</span>
+      <img [src]="weatherService.getWeatherIcon(selectedLocation.data.weather[0].id)">
+    </div>
+  </app-selected-condition>
 </ng-container>
 
 
