--- a/jmazaWeatherApp/src/app/forecasts-list/forecasts-list.component.html
+++ b/jmazaWeatherApp/src/app/forecasts-list/forecasts-list.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="panel panel-default"> 
     <div class="panel-heading">
-      <h3 class="panel-title">5-day forecast for {{forecast?.city.name}}</h3>
+      <h3 class="panel-title" data-cy="forecast-title">5-day forecast for {{forecast?.city.name}}</h3>
     </div>
 
     <ul class="list-group">
@@ -15,4 +15,4 @@
     </ul>
   </div>
 </div>
-<button class="btn btn-success" [routerLink]="'/'" >< Back to main page</button>
+<button class="btn btn-success" [routerLink]="'/'" data-cy="back-button">< Back to main page</button>
