--- a/jmazaWeatherApp/src/app/main-page/main-page.component.html
+++ b/jmazaWeatherApp/src/app/main-page/main-page.component.html
@@ -4,14 +4,14 @@
     <p>Last time cache was refreshed: {{ cache.lastTime | date: 'long' }}</p>
     <div class="cache-input">
       <p>Cache refresh every : </p>
-      <input type="number" #cacheInput [value]="cache.cacheDuration / 1000">
+      <input type="number" #cacheInput [value]="cache.cacheDuration / 1000" data-cy="update-cache-input">
       <p>seconds</p>
     </div>
     <div class="cache-buttons">
-      <button class="btn btn-primary cache-button" (click)="onClickUpdateCacheDuration(cacheInput.value)">
+      <button class="btn btn-primary cache-button" (click)="onClickUpdateCacheDuration(cacheInput.value)" data-cy="update-cache">
         Update Cache Duration
       </button>
-      <button class="btn btn-primary cache-button" (click)="onClickClearCache()">
+      <button class="btn btn-primary cache-button" (click)="onClickClearCache()" data-cy="clear-cache">
         Clear Cache
       </button>
     </div>
@@ -22,7 +22,7 @@
 
   <ng-container *ngIf="$errorMsg | async as errorMsg">
     <div class="alert alert-danger" role="alert">
-      <p>{{ errorMsg }}</p>
+      <p data-cy="error-message">{{ errorMsg }}</p>
       <span class="close" (click)="onClickCloseMessage()">&times;</span>
     </div>
   </ng-container>
