--- a/jmazaWeatherApp/src/app/zipcode-entry/zipcode-entry.component.html
+++ b/jmazaWeatherApp/src/app/zipcode-entry/zipcode-entry.component.html
@@ -1,12 +1,12 @@
 <div class="well">
   <h2>Enter a zipcode:</h2>
-  <input type="text" placeholder="Zipcode" class="form-control" [(ngModel)]="zipcode">
+  <input type="text" placeholder="Zipcode" class="form-control" [(ngModel)]="zipcode" data-cy="input-location">
   <br>
   <div class="location-buttons">
-    <button class="btn btn-primary" (click)="addLocation()" >
+    <button class="btn btn-primary" (click)="addLocation()" data-cy="add-location">
       Add location
     </button>
-    <button class="btn btn-primary" (click)="removeAllLocation()">
+    <button class="btn btn-primary" (click)="removeAllLocation()" data-cy="remove-locations">
       Remove locations
     </button>
   </div>
